--- a/css/index.css
+++ b/css/index.css
@@ -153,7 +153,7 @@ a:visited {
     .banner {
         display: grid;
         grid-template-columns: 50% 50%;
-        grid-template-areas: 'content img';
+        grid-template-areas: 'img content';
         padding: 0; 
     }
 
